--- a/MyProjectDetail.html
+++ b/MyProjectDetail.html
@@ -11,7 +11,7 @@
 
         <div class="left">
             <a href="index.html">
-                <img src="assets/image/logo.png" alt="logo">
+                <img src="assets/images/logo.png" alt="logo">
             </a>
             <ul>
                 <li>
@@ -34,7 +34,7 @@
             <Div class="body-top">
 
                 <div class="foto">
-                    <img src="assets/image/foto1.jpg" alt="foto">
+                    <img src="assets/images/foto1.jpg" alt="foto">
                 </div>
             
                 <div>
