--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
             <div class="left">
                 <a href="index.html">
-                    <img src="assets/image/logo.png" alt="logo">
+                    <img src="assets/Images/logo.png" alt="logo">
                 </a>
                 <ul>
                     <li>
