--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <div class="left">
                 <a href="index.html">
-                    <img src="assets/image/logo.png" alt="logo">
+                    <img src="assets/Images/logo.png" alt="logo">
                 </a>
                 <ul>
                     <li>
@@ -65,7 +65,7 @@
                     border-radius: 20px;
                     box-shadow: 0 0 10px rgb(187, 186, 186);
                     ">
-                    <img style="width: 100%; border-radius: 20px 20px 0 0;" src="assets/Image/FotoTugas.jpg" alt="Foto">
+                    <img style="width: 100%; border-radius: 20px 20px 0 0;" src="assets/Images/FotoTugas.jpg" alt="Foto">
                     <h2>Rhoma Irama</h2>
                     <p>Fullstack Developer</p>
 
