--- a/MyProjectDetail.html
+++ b/MyProjectDetail.html
@@ -12,7 +12,7 @@
 
         <div class="left">
             <a href="index.html">
-                <img src="assets/images/logo.png" alt="logo">
+                <img src="assets/Images/logo.png" alt="logo">
             </a>
             <ul>
                 <li>
@@ -35,7 +35,7 @@
             <Div class="body-top">
 
                 <div class="foto">
-                    <img src="assets/images/foto1.jpg" alt="foto">
+                    <img src="assets/Images/foto1.jpg" alt="foto">
                 </div>
             
                 <div>
