--- a/MyProject.html
+++ b/MyProject.html
@@ -13,7 +13,7 @@
 
             <div class="left">
                 <a href="index.html">
-                    <img src="assets/images/logo.png" alt="logo">
+                    <img src="assets/Images/logo.png" alt="logo">
                 </a>
                 <ul>
                     <li>
@@ -79,7 +79,7 @@
                         <div class="image">
                             <label for="Input Image">
                                 <p>Choose</p>
-                                <img src="assets/images/file.png" alt="file">
+                                <img src="assets/Images/file.png" alt="file">
                             </label>
                             <input type="file" id="Input Image" hidden>
                         </div>
@@ -101,7 +101,7 @@
 
             <div class="content">
 
-                <img src="assets/images/image1.jpg" alt="image" id="content">
+                <img src="assets/Images/image1.jpg" alt="image" id="content">
                 <h2>
                     <a href="MyProjectDetail.html" target="_blank" class="link">Dumbways Mobile App - 2022</a>
                     
