--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
                 <label for="input-subject">Subject</label>
                 <select id="input-subject">
                     <option value="" hidden>Select</option>
-                    <option>Frontend</option>
-                    <option>Backend</option>
-                    <option>Fullstack</option>
+                    <option value="Frontend">Frontend</option>
+                    <option value="Backend">Backend</option>
+                    <option value="Fullstack">Fullstack</option>
                 </select>
             </div>
 
