--- a/MyProject.html
+++ b/MyProject.html
@@ -108,7 +108,7 @@
                 </h2>
                 
                 <div class="waktu">
-                    <p>1 Day ago</p>
+                    <p>1 Day</p>
                 </div>
 
                 <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happ download.</p>
